--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -13,6 +13,7 @@ body {
     font-family: var(--major-font-family);
     color: var(--primary-color);
     letter-spacing: 0.08em;
+    background-color: aqua;
 }
 
 h1,
