--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
 @import '../../node_modules/modern-normalize/modern-normalize.css';
-@import './base/common';
+@import './base/_common';
+@import './base/_container';
+@import './components/subtitle';
