--- a/src/sass/layout/_one-card.scss
+++ b/src/sass/layout/_one-card.scss
@@ -1,70 +1,73 @@
-.photo-card{
-    width: 280px;
-    height: 443px;
-    
-    @media screen and (min-width: 768px) {
-        width: 336px;
-        height: 494px;
-    }
-    @media screen and (min-width: 1280px) {
-        width: 395px;
-        height: 634px;
-    }
-    
-}
-
-.photo-card__link{
-    margin-bottom: 10px;
-
-    @media screen and (min-width: 768px) {
-        margin-bottom: 8px;
-    }
-    @media screen and (min-width: 1280px) {
-        margin-bottom: 12px;
-    }
-}
-
-.photo-card-img{    
-    height: 402px;
-
-    @media screen and (min-width: 768px) {        
-        height: 455px;
-    }
-
-    @media screen and (min-width: 1280px) {
-        height: 574px;
-    }
-}
-
-.card-info{
-@include font(500, 12, 14);
-
-@media screen and (min-width: 768px) {
-    @include font($lh: 16)
-}
-
-@media screen and (min-width: 1280px) {
-    @include font($fs: 20, $lh: 24)
-}
-}
-
-
-.card-info__title{
+@media screen and (max-width: 1280px) {
+  .card-info__title {
     color: var(--primary-color);
-}
+  }
 
-
-.card-info__genre{
+  .card-info__genre {
     color: var(--accent-color);
-}
+  }
 
-
-.pseudo-element::before{
+  .pseudo-element::before {
     position: absolute;
     top: 0;
     right: -5px;
-    content: "";
+    content: '';
     width: 2px;
-    height: 100%;    
+    height: 100%;
     border: 1px solid var(--accent-color);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-card {
+    width: 280px;
+    height: 443px;
+  }
+
+  .photo-card__link {
+    margin-bottom: 10px;
+  }
+
+  .photo-card-img {
+    height: 402px;
+  }
+
+  .card-info {
+    @include font(500, 12, 14);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .photo-card {
+    width: 336px;
+    height: 494px;
+  }
+  .photo-card__link {
+    margin-bottom: 8px;
+  }
+  .photo-card-img {
+    height: 455px;
+  }
+  .card-info {
+    @include font(500, 12, 16);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo-card {
+    width: 395px;
+    height: 634px;
+  }
+
+  .photo-card__link {
+    margin-bottom: 12px;
+  }
+
+  .photo-card-img {
+    height: 574px;
+  }
+
+  .card-info {
+    @include font(500, 20, 24);
+  }
 }
