--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -1,5 +1,3 @@
-//Common styles
-
 .card-info__title {
   color: var(--primary-color);
 }
@@ -18,8 +16,15 @@
   border: 1px solid var(--accent-color);
 }
 
+//Styles for old mob
+@media screen and (max-width: 320) {
+  .photo-card {
+    width: 100%;
+  }
+}
+
 //Mobile styles 320px
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .photo-card {
     width: 280px;
     height: 443px;
