--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --major-font-family: ;
+    --major-font-family: Roboto;
     
     --primary-color: #000;
     --secondary-text-color: #545454;
