--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,34 @@
-<header>
-  
+
+<header class="header">
+    <div class="container container_header">
+        <div class="header-line">
+            <div class="logo">
+                <svg class="logo-icon" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-film"></use>
+                </svg>
+                <h1 class="logo-text">Filmoteka</h1>
+            </div>
+            <nav class="nav">
+                <ul class="list nav-list">
+                    <li class="nav-item">
+                        <a class="nav__link link current-page" href="./index.html">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav__link link interactive" href="./my_library.html">my library</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="search">
+            <form class="search-form" id="search-form">
+                <input class="input" type="text" name="searchQuery" autocomplete="off" placeholder="Search movies..." />
+                <button class="search-btn" type="submit">
+                    <svg class="logo-search" width="12" height="10">
+                        <use href="./images/sprite.svg#icon-search"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
 </header>
