--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -5,8 +5,8 @@
         width: 100vw;
         padding-left: 20px;
         padding-right: 20px;
-        margin-left: auto;
-        margin-right: auto;
+        // margin-left: auto;
+        // margin-right: auto;
     }
 }
 
@@ -17,8 +17,8 @@
         width: 320px;
         padding-left: 20px;
         padding-right: 20px;
-        margin-left: auto;
-        margin-right: auto;
+        // margin-left: auto;
+        // margin-right: auto;
     }
 }
 
