--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,6 +5,7 @@
     --secondary-text-color: #545454;
     --dark-theme-text-color: #fff;
     --accent-color: #FF6B08;
+    --style-color: #FF001B;
 
     --background-color_bright-theme: #F7F7F7;
 
