FT-16 fixed bags

--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -2,7 +2,7 @@
     <button type="button" class="data-modal-open">Enter</button>
 </div> -->
 
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop " data-modal>
     <div class="modal">
         <button type="button" class="modal__close-btn" data-modal-close>
             <!-- <svg class="modal-close__icon" width="18" height="18">
