--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --major-font-family: ;
+    --major-font-family: 'Roboto', sans-serif;
     
     --primary-color: #000;
     --secondary-text-color: #545454;
@@ -7,6 +7,7 @@
     --accent-color: #FF6B08;
 
     --background-color_bright-theme: #F7F7F7;
+    --secondary-text-modal-color: #8C8C8C;
 
     --duration: 300ms;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
