--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,55 +1,81 @@
-    <footer>
+
         <div class="footerModal">
             <h3 class="footerHeadline">Worked on a project:</h3>
             <ul class="teamList">
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-
+                    <img class="cardFront" 
+                        src="https://avatars.githubusercontent.com/u/97597653?v=4"
+                        alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Peter Yurich</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                        src="https://avatars.githubusercontent.com/u/97597653?v=4"
+                        alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Tetiana Ishchenko</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/97597653?v=4" 
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                    <p class="teamName">Evgen Prohorenko</p>
+                    <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/97597653?v=4"
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Alona Beskhlibnova</p>
+                        <p class="city">Odesa</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/97482927?v=4"
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Miroslav Semenuk</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/97597653?v=4"
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Mikhailo Korogod</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Golembovska Lyuda</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
                 <li class="teamCard">
-                    <img class="cardFront" src="" alt="">
-                    <div class="">
-                
+                    <img class="cardFront" 
+                    src="https://avatars.githubusercontent.com/u/96379129?v=4"
+                    alt="" width="256" height="256">
+                    <div class="cardRear">
+                        <p class="teamName">Natalia Kolomiichenko</p>
+                        <p class="city">Kyiv</p>
                     </div>
                 </li>
             </ul>
         </div>
-    </footer>
+  
+        
+    
