--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,7 @@
     padding-bottom: 62px;
     color: var(--dark-theme-text-color);
 
-    // background-color: rgb(31, 2, 2);
+    background-color: rgb(31, 2, 2);
     background-repeat: no-repeat;
     background-size: cover;
 }
