--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -1,6 +1,6 @@
-<!-- <div>
-    <button type="button" class="data-modal-open">Enter</button>
-</div> -->
+<div>
+    <button type="button" data-modal-open>Enter</button>
+</div>
 
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -77,3 +77,4 @@
 
     </div>
 </div>
+<script src="/src/js/open-modal-window.js"></script>
