--- a/src/sass/components/_film-modal-window.scss
+++ b/src/sass/components/_film-modal-window.scss
@@ -33,6 +33,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
     width: 280px;
+    height: 940px;
     max-height: 560px;
     overflow-y: scroll;
     overflow-x: hidden;
