--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -6,7 +6,7 @@
   color: var(--accent-color);
 }
 
-.pseudo-element::before {
+.info-separator::before {
   position: absolute;
   top: 0;
   right: -5px;
@@ -16,14 +16,14 @@
   border: 1px solid var(--accent-color);
 }
 
-//old mob
+// mob responsive
 @media screen and (max-width: 320) {
   .photo-card {
     width: 100%;
   }
 }
 
-//Mobile
+// mob adaptive
 @media screen and (max-width: 767px) {
   .photo-card {
     width: 280px;
@@ -43,7 +43,7 @@
   }
 }
 
-//Tablet
+// tablet
 @media screen and (min-width: 768px) {
   .photo-card {
     width: 336px;
@@ -60,7 +60,7 @@
   }
 }
 
-//Desktop
+// desktop
 
 @media screen and (min-width: 1280px) {
   .photo-card {
