--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 
 @import './components/film-modal-window';
 @import './components/one-card';
+@import './components/loader';
 
 @import './layout/film-grid';
 @import './layout/header';
