Last update svg

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,17 +1,16 @@
+
 <footer class="footer">
-    <div class="container footer-div">
-      <p class="footer-text">© 2022 | All Rights Reserved |&nbsp</p>
-      <p class="footer-text">
-        Developed with
-        <svg class="footer-icon">
-         
-        </svg>
-        <a class="footer-link" href="" data-modal-open>GoIt Students</a>
-      </p>
-  
-      <div data-modal class="backdrop is-hidden">
-     // Тут буде модалка
-      </div>
-      <div class="backdrop modal-trailer js-trailer is-hidden"></div>
-    </div>
-  </footer>
+  <div class="container container_footer">
+    <p class="footer-text">© 2022 | All Rights Reserved |&nbsp</p>
+    <p class="footer-text">
+      Developed with
+      <svg class="footer-icon">
+
+        <use href=""></use>
+      </svg>
+      <a class="footer-link" href="" data-modal-open>GoIt Students</a>
+    </p>
+
+    
+  </div>
+</footer>
