--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,60 +1,75 @@
 body {
-    position: relative;
-    min-height: 100vh;
+ // position: relative;
+  min-height: 100vh;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 77px;
+ //margin-top: auto;
+
+  background-color: var(--background-color_bright-theme);
+  padding-top: 28px;
+  padding-bottom: 28px;
+
+  //tablet
+
+  @media screen and (min-width: 768px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
-  
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 77px;
-    margin-top: auto;
-  
-    background-color: #f7f7f7;
-    padding-top: 28px;
+
+  //desktop
+  @media screen and (min-width: 1280px) {
     padding-bottom: 28px;
-  
-    @media screen and (min-width: 768px) {
-      padding-top: 30px;
-      padding-bottom: 30px;
-    }
-  
-    @media screen and (min-width: 1280px) {
-      padding-bottom: 28px;
-    }
   }
-  
-  .footer-div {
-    @media screen and (min-width: 768px) {
-      display: flex;
-      justify-content: center;
-      align-items: baseline;
-    }
+}
+
+.container_footer {
+  //tablet
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
   }
-  
-  .footer-text {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    color: #545454;
-    text-align: center;
-  
-    @media screen and (min-width: 768px) {
-      font-size: 16px;
-      line-height: calc(16 / 18);
-    }
+}
+
+.footer-text {
+  @include font(400, 14, 16);
+  font-family: 'Roboto';
+  //font-weight: 400;
+  //font-size: 14px;
+  line-height: calc(16 / 14);
+  color: #545454;
+  text-align: center;
+
+
+  // tablet
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: calc(16 / 18);
   }
-  
-  .footer-link {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(16 / 41);
-    color: #545454;
-  
-    @media screen and (min-width: 768px) {
-      font-size: 16px;
-      line-height: calc(16 / 18);
-    }
+}
+
+.footer-link {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(16 / 41);
+  color: #545454;
+
+
+  //tablet
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: calc(16 / 18);
   }
+}
+.footer-icon {
+  width: 16px;
+  height: 16px;
+  -webkit-animation: pulsing 2s infinite;
+  animation: pulsing 2s infinite;
+}
