--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,8 +6,9 @@
       Developed with
       <svg class="footer-icon">
 
-        <use href=""></use>
-      </svg>
+        <use href="./images/sprite.svg#icon-heart"></use>
+      </svg> 
+       by
       <a class="footer-link" href="" data-modal-open>GoIt Students</a>
     </p>
 
