fixed fn getDetails

--- a/src/partials/my_lib-header.html
+++ b/src/partials/my_lib-header.html
@@ -1,13 +1,14 @@
 <header class="library-header">
     <div class="container container_header">
         <div class="header-line">
-        <a href="./index.html"> <div class="logo">
-               <svg class="logo-icon" width="40" height="40">
-                    <use href="./images/sprite.svg#icon-film"></use>
-                </svg>
-                <h1 class="logo-text">Filmoteka</h1>
-            </div>
-        </a>    
+            <a href="./index.html">
+                <div class="logo">
+                    <svg class="logo-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-film"></use>
+                    </svg>
+                    <h1 class="logo-text">Filmoteka</h1>
+                </div>
+            </a>
             <nav class="nav">
                 <ul class="list nav-list">
                     <li class="nav-item">
@@ -21,8 +22,8 @@
         </div>
 
         <div class="button_list">
-           <button class="my-lib-header-button">WATCHED</button>
-           <button class="my-lib-header-button">QUEUE</button>
+            <button class="my-lib-header-button">WATCHED</button>
+            <button class="my-lib-header-button">QUEUE</button>
         </div>
     </div>
 </header>
