--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,11 +1,12 @@
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 100px;
   width: 100%;
   height: 77px;
   background-color: var(--background-color_bright-theme);
   padding-top: 28px;
   padding-bottom: 28px;
+
 }
 
 .footer-text {
@@ -25,8 +26,40 @@
 }
 
 
-//animation
 
+//tablet
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .container_footer {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+  }
+
+  .footer-text {
+    font-size: 16px;
+    line-height: calc(16 / 18);
+  }
+
+  .footer-link {
+    font-size: 16px;
+    line-height: calc(16 / 18);
+  }
+
+}
+
+//desktop
+@media screen and (min-width: 1280px) {
+  .footer {
+    padding-bottom: 28px;
+  }
+}
+
+//animation
 .footer-icon {
   width: 16px;
   height: 16px;
@@ -65,38 +98,5 @@
   100% {
     -webkit-transform: scale(0.5, 0.5);
     transform: scale(0.5, 0.5);
-  }
-}
-
-
-//tablet
-@media screen and (min-width: 768px) {
-  .footer {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-
-  .container_footer {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-  }
-
-  .footer-text {
-    font-size: 16px;
-    line-height: calc(16 / 18);
-  }
-
-  .footer-link {
-    font-size: 16px;
-    line-height: calc(16 / 18);
-  }
-
-}
-
-//desktop
-@media screen and (min-width: 1280px) {
-  .footer {
-    padding-bottom: 28px;
   }
 }
