--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,6 +1,16 @@
-@media screen and (min-width: 768px) {
+.film-grid {
+    padding: 10px;
+}
+
+@media screen and (min-width: 320px) {
     .film-grid {
         display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .film-grid {
         gap: 32px;
     }
 }
