--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,17 +1,19 @@
 .film-grid {
-    padding: 10px;
+    padding-top: 10px;
 }
 
 @media screen and (min-width: 320px) {
     .film-grid {
         display: flex;
         flex-wrap: wrap;
+        padding-top: 20px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .film-grid {
         gap: 32px;
+        padding-top: 60px;
     }
 }
 
