--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -130,7 +130,7 @@
 @media screen and (min-width: 768px) {
     .header {
         height: 216px;
-        background-image: url(../images/header-back-tab.jpg)
+        background-image: url(../images/header-back-tab.png)
     }
 
     .logo {
@@ -148,4 +148,8 @@
 }
 
 // desktop
-@media screen and (min-width: 1280px) {}
+@media screen and (min-width: 1280px) {
+    .header {
+        background-image: url(../images/header-back-pc.png)
+    }
+}
