--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,13 @@
 @import './components/film-modal-window';
 @import './components/one-card';
 
+
+@import './components/film-modal-window';
+@import './components/one-card';
+
 @import './layout/film-grid';
 @import './layout/header';
+@import './layout/footer';
+
 
 
