--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,56 +8,56 @@
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: #0e0e0e;
+    background-color: var(--background-color_modal-footer);
     background-position: no-repeat;
     background-size: contain;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-    @media screen and (min-width: 320px) {
-    .cardFront {
-        width: 153px;
-        height: 153px;
-    }
-        .footerHeadline {
-            font-size: 30px;
-        }
+@media screen and (min-width: 320px) {
+.cardFront {
+    width: 153px;
+    height: 153px;
+}
+.footerHeadline {
+    font-size: 30px;
+}
 }
 
-    @media screen and (min-width: 768px) {
-     .cardFront{
-     width: 153px;
-     height: 153px;
-     }
-     .footerHeadline {
+@media screen and (min-width: 768px) {
+.cardFront{
+    width: 153px;
+    height: 153px;
+}
+.footerHeadline {
      font-size: 50px;
-     }
+}
 }
       
-    @media screen and (min-width: 1280px) {
-     .cardFront{
-     width: 256px;
-     height: 256px;
-     }
-      .footerHeadline{
-      font-size: 50px;
-     }
+@media screen and (min-width: 1280px) {
+.cardFront{
+    width: 256px;
+    height: 256px;
+}
+.footerHeadline{
+    font-size: 50px;
+}
 }
 
- .footerHeadline {
-     display: inline;
-     color: #fff;
-     margin: 0;
-     margin-bottom: 40px;
+.footerHeadline {
+    display: inline;
+    color: var(--dark-theme-text-color);
+    margin: 0;
+    margin-bottom: 40px;
 
-     color: #939393;
+    color: var(--secondary-text-modal-color);
 
-     font-weight: 100;
+    font-weight: 100;
      //font-size: 50px;
-     line-height: 30px;
- }
- .teamList {
+    line-height: 30px;
+}
+.teamList {
     justify-content: center;
     align-items: center;
     display: flex;
@@ -66,17 +66,17 @@
     padding-left: 0;
     width: 90%;
     gap: 40px;
- }
+}
  
 .teamName,
-.city{
-    color: #939393;
+.city {
+    color: var(--secondary-text-modal-color);
     justify-content: center;
     align-items: center;
     display: flex;
 }
 .teamName {
-font-size: 20px;
+    font-size: 20px;
 }
 
 .cardFront {
@@ -85,7 +85,7 @@ font-size: 20px;
     -o-object-fit: cover;
     object-fit: cover;
 
-    background-color: #fff;
+    background-color: var(--dark-theme-text-color);
 }
 .is-hidden {
     visibility: hidden;
@@ -96,9 +96,36 @@ font-size: 20px;
 
     background-color: transparent;
 
-    .teamCard {
-        list-style: none;
-        height: 0px;
-        position: relative;      
-    }
+.teamCard {
+    list-style: none;
+    height: 0px;
+    //position: relative;      
+}
+}
+.modal__close-btn {
+    fill: var(--dark-theme-text-color);
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms var(--timing-function);
+    ;
+    background-image: url(/src/images/close-btn.svg);
+    background-size: contain;
+}
+
+.modal__close-btn:focus,
+.modal__close-btn:hover {
+    background-color: var(--secondary-text-modal-color);
 }
