--- a/src/partials/my_lib-header.html
+++ b/src/partials/my_lib-header.html
@@ -1,6 +1,6 @@
 <header class="library-header">
     <div class="container container_header">
-        <div class="header-line">
+        <div class="my-lib_header-line">
             <a href="./index.html">
                 <div class="logo">
                     <svg class="logo-icon" width="40" height="40">
