--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -18,7 +18,7 @@
   margin-left: 10px;
   border-left: 2px solid var(--accent-color);
 }
-.film-raiting {
+.film-rating {
   position: absolute;
   display: inline-block;
   bottom: -3px;
