--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,6 +5,8 @@
   --secondary-text-color: #545454;
   --dark-theme-text-color: #fff;
   --accent-color: #ff6b08;
+  --accent-text-color: #ffffff;
+  --background-accent-color: #ff6b01;
   --style-color: #ff001b;
 
   --background-color_bright-theme: #f7f7f7;
