fixed name refs

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,7 @@
                 <use href="./images/sprite.svg#icon-heart"></use>
             </svg>
             by
-            <a class="footer-link" href="" data-modal-open>GoIt Students</a>
+            <a class="footer-link" href="" data-modal-open-team>GoIt Students</a>
         </p>
     </div>
 </footer>
