--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,9 +1,9 @@
-        <div>
+        <!-- <div>
             <button type="button" data-modal-open>Enter</button>
-        </div>
-        <div class="footerModal is-hidden" data-modal>
+        </div> -->
+        <div class="footerModal is-hidden" data-modal-team>
             <h3 class="footerHeadline">Worked on a project:</h3>
-            <button type="button" class="modal__close-btn" data-modal-close>
+            <button type="button" class="modal__close-btn" data-modal-close-team>
                 <!-- <svg class="modal-close__icon" width="18" height="18">
                             <use href="./images/close-btn.svg"></use>
                         </svg> -->
