--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -1,6 +1,7 @@
 .photo-card {
   border-radius: 5px;
 }
+
 .card-info {
   @include font(500, 12, 14);
   color: var(--accent-color);
@@ -12,15 +13,16 @@
 .card-info__genre {
   color: var(--accent-color);
 }
+
 .release-date {
   padding-left: 5px;
   border-left: 2px solid var(--accent-color);
 }
+
 .film-rating {
   display: inline-block;
   width: 36px;
   height: 16px;
-  padding: auto;
   text-align: center;
 
   border: 1px solid var(--accent-color);
@@ -47,9 +49,6 @@
   .card-info {
     @include font(500, 12, 14);
   }
-  .film-rating {
-    right: 66%;
-  }
 }
 
 // tablet
@@ -66,10 +65,6 @@
   }
   .card-info {
     @include font(500, 12, 16);
-  }
-  .film-rating {
-    top: 20px;
-    right: 86%;
   }
 }
 
@@ -93,10 +88,8 @@
     @include font(500, 20, 24);
   }
   .film-rating {
-    top: 32px;
-    right: 37%;
     width: 40px;
     height: 20px;
-    padding-top: 3px;
+    @include font(500, 12, 20);
   }
 }
