--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -3,10 +3,7 @@
         </div> -->
         <div class="footerModal is-hidden" data-modal-team>
             <h3 class="footerHeadline">Worked on a project:</h3>
-            <button type="button" class="modal__close-btn" data-modal-close-team>
-                <!-- <svg class="modal-close__icon" width="18" height="18">
-                            <use href="./images/close-btn.svg"></use>
-                        </svg> -->
+            <button type="button" class="modal__close-btn-team" data-modal-close-team>
             </button>
             <ul class="teamList">
                 <li class="teamCard">
