remove excessive margin in 1280px screen

--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -1,8 +1,11 @@
 .photo-card {
   margin-bottom: 20px;
   &:nth-child(n + 20) {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
+  // &:last-child {
+  //   padding-bottom: 40px;
+  // }
 }
 
 .photo-card-img {
@@ -90,9 +93,6 @@
 
   .card-info {
     @include font(500, 20, 24);
-    &:last-child {
-      margin-bottom: 60px;
-    }
   }
   .film-rating {
     width: 40px;
