--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 100;
     display: flex;
     flex-direction: column;
