--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,22 +1,32 @@
 .film-grid {
-    padding: 10px;
+  //   padding: 12px;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
-@media screen and (min-width: 320px) {
-    .film-grid {
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
+// @media screen and (min-width: 320px) {
+//   .film-grid {
+//     display: inline-grid;
+//     grid-template-columns: auto;
+//     // flex-wrap: wrap;
+//     // &:not(:last-child) {
+//     //   margin-bottom: 20px;
+//     // }
+//   }
+// }
 
 @media screen and (min-width: 768px) {
-    .film-grid {
-        gap: 32px;
-    }
+  .film-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 32px;
+    padding-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .film-grid {
-        row-gap: 16px;
-    }
+  .film-grid {
+    grid-template-columns: auto auto auto;
+    gap: 32px 16px;
+  }
 }
