--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,5 @@
 <section class="film-list-section">
-    <div class="container">
+    <div class="container container-main">
         <div class="film-grid">
             <!-- сюди будемо динамічно вставляти картки фільмів -->
         </div>
