--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,3 +1,9 @@
+@media screen and (min-width: 768px) {
+.container-main {
+    display: contents;
+}
+}
+
 @media screen and (min-width: 320px) {
     .film-grid {
         display: flex;
@@ -9,7 +15,7 @@
 
 @media screen and (min-width: 768px) {
     .film-grid {
-        justify-content: space-around;
+        justify-content: center;
         margin-top: 60px;
         margin-bottom: 60px;
         gap: 32px;
