Squashed commit of the following:
commit c1108dc845c60173dfda5f0b0334820174135021
Merge: d1d239a 9af6256
Author: Peter <97597653+PeterYurich@users.noreply.github.com>
Date:   Sat Aug 27 16:23:51 2022 +0300

    Merge pull request #30 from PeterYurich/FT-05-Features-Fix-rating

    fix styles

commit 9af6256761fe4c3f4717292172ff18f05c9312ba
Author: Yevhen Prokhorenko <prokhorenko.yevhen@gmail.com>
Date:   Sat Aug 27 16:19:49 2022 +0300

    fix grid

commit a650bc7f3d410b5eeaf2b2f372843c9580366d21
Author: Yevhen Prokhorenko <prokhorenko.yevhen@gmail.com>
Date:   Sat Aug 27 14:21:26 2022 +0300

    remove excessive margin in 1280px screen

commit 3aa58fe6336360213abf256c5fe032d955039d4e
Author: Yevhen Prokhorenko <prokhorenko.yevhen@gmail.com>
Date:   Sat Aug 27 13:46:42 2022 +0300

    fix styles

commit d1d239aa880da9d59eef3311c6493d0619c35588
Merge: d554b16 78e2c3c
Author: Peter <97597653+PeterYurich@users.noreply.github.com>
Date:   Sat Aug 27 02:42:02 2022 +0300

    Merge pull request #29 from PeterYurich/MyLib-marckup-fn

    My lib marckup fn

commit 78e2c3c1ba5a158e12700d9d75a7301a0edc0c7a
Merge: 4b435d3 d554b16
Author: Peter <97597653+PeterYurich@users.noreply.github.com>
Date:   Sat Aug 27 02:41:55 2022 +0300

    Merge branch 'main' into MyLib-marckup-fn

commit 4b435d3e7e522f11c79e49b27684767e4cb7fed4
Author: Peter <peteryurich@gmail.com>
Date:   Sat Aug 27 02:25:49 2022 +0300

    ready fn for making markup from localStorage

commit 4fa70a4e28400b31fd18b1e118d9fcc8e79589bc
Author: Peter <peteryurich@gmail.com>
Date:   Sat Aug 27 02:05:10 2022 +0300

    done load selectedFilms

commit 5bc13ae88b8421733717bb06fd6a608e059a9aed
Author: Peter <peteryurich@gmail.com>
Date:   Sat Aug 27 01:16:48 2022 +0300

    com

commit d554b16ba1e6db645545e3261be37c4d174db969
Merge: 3d6d47f bbee07b
Author: Peter <97597653+PeterYurich@users.noreply.github.com>
Date:   Sat Aug 27 00:37:47 2022 +0300

    Merge pull request #27 from PeterYurich/fixed_feature-FT-12

    fixed 

--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -1,27 +1,45 @@
+.photo-card-img {
+  border-radius: 5px;
+  margin-bottom: 8px;
+}
+.card-info {
+  @include font(500, 12, 14);
+  color: var(--accent-color);
+}
 .card-info__title {
   color: var(--primary-color);
+  margin-bottom: 5px;
 }
 
 .card-info__genre {
   color: var(--accent-color);
 }
 
-.info-separator::before {
-  position: absolute;
-  top: 0;
-  right: -5px;
-  content: '';
-  width: 2px;
-  height: 100%;
-  border: 1px solid var(--accent-color);
+.release-date {
+  padding-left: 5px;
+  border-left: 2px solid var(--accent-color);
 }
 
-// mob responsive
-@media screen and (max-width: 319px) {
-.photo-card {
-  width: 100%;
-  padding-top: 20px;
+.film-rating {
+  display: inline-block;
+  width: 36px;
+  height: 16px;
+  text-align: center;
+
+  border: 1px solid var(--accent-color);
+  background: var(--background-accent-color);
+  border-radius: 5px;
+  color: var(--accent-text-color);
 }
+
+// mob adaptive
+@media screen and (max-width: 767px) {
+  .card-info {
+    @include font(500, 12, 14);
+  }
+  .photo-card-img {
+    max-width: 280px;
+  }
 }
 
 // tablet
@@ -49,5 +67,10 @@
 
   .card-info {
     @include font(500, 20, 24);
+  }
+  .film-rating {
+    width: 40px;
+    height: 20px;
+    @include font(500, 12, 22);
   }
 }
