--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,12 +6,15 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 
-
+@import './components/film-modal-window';
+@import './components/one-card';
 @import './components/film-modal-window';
 @import './components/one-card';
 @import './components/loader';
+@import './components/modal-footer';
 
 @import './layout/film-grid';
 @import './layout/header';
 @import './layout/footer';
 @import './layout/my_lib_header';
+
