--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) {
 .container-main {
     display: contents;
 }
@@ -7,15 +7,16 @@
 @media screen and (min-width: 320px) {
     .film-grid {
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
         margin-top: 20px;
         margin-bottom: 40px;
+        row-gap: 20px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .film-grid {
-        justify-content: center;
         margin-top: 60px;
         margin-bottom: 60px;
         gap: 32px;
